--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "portfolio-d080c",
+    "default": "portfolio-5352b",
     "portfolio": "portfolio-5352b"
   },
   "targets": {},
